--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@capacitor-community/speech-recognition": "^7.0.0",
+    "@capacitor-community/text-to-speech": "^6.0.0",
     "@capacitor/android": "^7.1.0",
     "@capacitor/app": "7.0.0",
     "@capacitor/camera": "^7.0.0",
@@ -33,6 +35,7 @@
     "@capacitor/preferences": "^7.0.0",
     "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
+    "@capawesome/capacitor-file-picker": "^7.0.1",
     "@google/generative-ai": "^0.24.0",
     "@ionic/angular": "^8.0.0",
     "firebase": "^11.5.0",
@@ -49,7 +52,7 @@
     "@angular-eslint/eslint-plugin-template": "^19.0.0",
     "@angular-eslint/schematics": "^19.0.0",
     "@angular-eslint/template-parser": "^19.0.0",
-    "@angular/cli": "^19.0.0",
+    "@angular/cli": "19.2.9",
     "@angular/compiler-cli": "^19.2.5",
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "^7.1.0",
