implementacion de la base de datos

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "^7.1.0",
     "@capacitor/filesystem": "^7.0.1",
+    "@capacitor/geolocation": "^7.1.2",
     "@capacitor/haptics": "7.0.0",
-    "@capacitor/keyboard": "7.0.0",
+    "@capacitor/keyboard": "^7.0.0",
     "@capacitor/local-notifications": "^7.0.1",
     "@capacitor/preferences": "^7.0.0",
     "@capacitor/push-notifications": "^7.0.1",
