--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
     "@capawesome/capacitor-file-picker": "^7.0.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@google/generative-ai": "^0.24.0",
     "@ionic/angular": "^8.0.0",
     "firebase": "^11.5.0",
@@ -74,5 +75,13 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.6.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "browserslist": [
+    "Chrome >=79",
+    "ChromeAndroid >=79",
+    "Firefox >=70",
+    "Edge >=79",
+    "Safari >=14",
+    "iOS >=14"
+  ]
 }
