--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@capacitor/local-notifications": "^7.0.1",
     "@capacitor/preferences": "^7.0.0",
     "@capacitor/push-notifications": "^7.0.1",
-    "@capacitor/status-bar": "7.0.0",
+    "@capacitor/status-bar": "^7.0.1",
     "@capawesome/capacitor-file-picker": "^7.0.1",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@fortawesome/fontawesome-free": "^6.7.2",
